-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.3.0
-
None
-
00f77bdc5beb62e980216cfee906ab7aa1d1c4f7
Found bug in QWebSocketPrivate::setProxy(const QNetworkProxy &networkProxy) source code. Incorrect condition:
if (networkProxy != networkProxy)
m_configuration.m_proxy = networkProxy;
For Gerrit Dashboard: QTBUG-39568 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
88204,2 | Fix a typo in proxy handling. | 5.3 | qt/qtwebsockets | Status: MERGED | +2 | 0 |