Fix a typo in proxy handling.

Change-Id: I25c9b9be2c780dae32e3f634f58e44be303a4b23
Task-number: QTBUG-39568
Reviewed-by: Kurt Pattyn <pattyn.kurt@gmail.com>